# OpenSoundMixer

./: .gitignore  CMakeLists.txt  LICENSE  OpenSoundMixer.sln  README.md  build.sh
docs/: Overview_Ja.md
lib/Debug/: libogg_static.lib  libvorbis_static.lib  libvorbisfile_static.lib
lib/Release/: libogg_static.lib  libvorbis_static.lib  libvorbisfile_static.lib
lib/x64/Debug/: libogg_static.lib  libvorbis_static.lib  libvorbisfile_static.lib
lib/x64/Debug/VS2013/: libogg_static.lib  libvorbis_static.lib  libvorbisfile_static.lib
lib/x64/Debug/VS2015/: libogg_static.lib  libvorbis_static.lib  libvorbisfile_static.lib
lib/x64/Release/: libogg_static.lib  libvorbis_static.lib  libvorbisfile_static.lib
lib/x64/Release/VS2013/: libogg_static.lib  libvorbis_static.lib  libvorbisfile_static.lib
lib/x64/Release/VS2015/: libogg_static.lib  libvorbis_static.lib  libvorbisfile_static.lib
lib/x86/Debug/: libogg_static.lib  libvorbis_static.lib  libvorbisfile_static.lib
lib/x86/Debug/VS2013/: libogg_static.lib  libvorbis_static.lib  libvorbisfile_static.lib
lib/x86/Debug/VS2015/: libogg_static.lib  libvorbis_static.lib  libvorbisfile_static.lib
lib/x86/Release/: libogg_static.lib  libvorbis_static.lib  libvorbisfile_static.lib
lib/x86/Release/VS2013/: libogg_static.lib  libvorbis_static.lib  libvorbisfile_static.lib
lib/x86/Release/VS2015/: libogg_static.lib  libvorbis_static.lib  libvorbisfile_static.lib
msvc/: OpenSoundMixer.vcxproj  OpenSoundMixer.vcxproj.filters  Test.vcxproj
scripts/: GenerateProjectsWithSanitize.sh  setup.py
src/: OpenSoundMixer.h  OpenSoundMixerInternal.h  main.cpp  osm.Decorder.cpp  osm.Decorder.h  osm.FastFourierTransform.cpp  osm.FastFourierTransform.h  osm.Manager.cpp  osm.Manager_Impl.cpp  osm.Manager_Impl.h  osm.ReferenceObject.cpp  osm.ReferenceObject.h  osm.Sound_Impl.cpp  osm.Sound_Impl.h
src/Decorder/: osm.OggDecorder.cpp  osm.OggDecorder.h  osm.WaveDecorder.cpp  osm.WaveDecorder.h
src/Filter/: osm.Panner.cpp  osm.Panner.h  osm.Resampler.cpp  osm.Resampler.h
src/Manager/: osm.Manager_Impl_OpenAL.cpp  osm.Manager_Impl_OpenAL.h  osm.Manager_Impl_PulseAudio.cpp  osm.Manager_Impl_PulseAudio.h  osm.Manager_Impl_WasApi.cpp  osm.Manager_Impl_WasApi.h  osm.Manager_Impl_XAudio2.cpp  osm.Manager_Impl_XAudio2.h
src_test/: main.cpp
test/: main.cpp
